fix: blog content overflow

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,3 +2,7 @@
 
 @import './bulma.scss';
 @import './markdown.scss';
+
+body {
+    overflow-x: hidden;
+}
